# fair-perf-ml

./: .gitignore  404.html  :w  CHANGELOG.md  CNAME  Cargo.toml  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: CI.yml  docs.yml
bias_metrics/: post_training_bias.py
data_bias/: index.html
docs/: data_bias.md  drift.md  getting_started.md  index.md  model_bias.md  model_perf.md  models.md  roadmap.md  segmentation.md
drift/: index.html
fair_ml/: Cargo.toml  pyproject.toml
fair_ml/src/: lib.rs
fair_ml/src/data_bias/: mod.rs
fair_ml/src/data_handler/: mod.rs
fair_ml/src/model_bias/: mod.rs
fair_ml/src/runtime/: mod.rs
getting_started/: index.html
ml_bias/: Cargo.toml  pyproject.toml
ml_bias/src/: lib.rs
ml_bias/src/data_bias/: mod.rs
ml_bias/src/data_handler/: mod.rs
ml_bias/src/model_bias/: mod.rs
ml_bias/src/runtime/: mod.rs
model_bias/: index.html
model_perf/: index.html
models/: index.html
python/fair_ml/: _internal.py  data_bias.py  model_bias.py  model_perf.py  models.py
python/fair_perf_ml/: _fair_perf_ml.pyi  _internal.py  _internal.pyi  data_bias.py  drift.py  model_bias.py  model_perf.py  models.py  models.pyi
python/fair_perf_ml/bias/: __init__.py  data_bias.py  data_bias.pyi  model_bias.py  model_bias.pyi  segmentation.py  segmentation.pyi  streaming.py  streaming.pyi
python/fair_perf_ml/data_bias/: __init__.py  core.py  core.pyi  streaming.py  streaming.pyi
python/fair_perf_ml/drift/: __init__.py  base.py  base.pyi  manager.py  streaming.py  streaming.pyi
python/fair_perf_ml/model_bias/: __init__.py  core.py  core.pyi  streaming.py  streaming.pyi
python/fair_perf_ml/model_perf/: __init__.py  core.py  core.pyi  model_perf.py  model_perf.pyi  streaming.py  streaming.pyi
roadmap/: index.html
scripts/: build_and_test.sh  core_test.sh  core_test_dbg.sh  get_coverage.sh  lint_python.sh
search/: search_index.json
segmentation/: index.html
src/: lib.rs
src/data_bias/: core.rs  mod.rs  python_impl.rs  statistics.rs  streaming.rs
src/data_handler/: mod.rs
src/drift/: baseline.rs  data_drift.rs  distribution.rs  drift_metrics.rs  export.rs  mod.rs  psi.rs  python_impl.rs  windowed_drift.rs  windowed_drift_design.md
src/errors/: mod.rs
src/macros/: mod.rs
src/metrics/: mod.rs
src/model_bias/: core.rs  mod.rs  python_impl.rs  statistics.rs  streaming.rs
src/model_perf/: mod.rs  python_impl.rs  statistics.rs  streaming.rs
src/models/: mod.rs
src/reporting/: mod.rs
src/runtime/: mod.rs
tests/: test_bias_segmentation.py  test_data_bias.py  test_data_drift.py  test_internal_util.py  test_model_bias.py  test_model_perf.py  tests.py
usage/: usage.py
