[package]
name = "fair_perf_ml"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fair_perf_ml"
crate-type = ["rlib", "cdylib"]


[features]
default = ["python"]
python = [
  "pyo3",
  "pyo3/extension-module",
  "numpy",
  "rust-numpy",
]
rust = []

[dependencies]
ahash = "0.8.12"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.17"
uuid = {version = "1.18.1", features = ["v4"]}
pyo3 = {version = "0.24.0", optional = true, features = ["auto-initialize", "chrono"]}
rust-numpy = {version = "0.1.0", optional = true }
numpy = {version = "0.24.0", optional = true }
rand = "0.9.2"
num = "0.4.3"
ordered-float = "5.1.0"

