[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fair_perf_ml"
version = "0.2.0"
description = """
A package for evalutating machine learning models for pre training and post training bias
in addition to evaluting the model for performance at training time and runtime. New version includes
streaming style variants, and data drift functionality.
"""
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11,<3.14"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.9.2",
    "numpy>=2.0.0",
]
authors = [
    {name = "Kilian Hammersmith", email = "kilianhammersmith@gmail.com"}
]
maintainers = [
    {name = "Kilian Hammersmith", email = "kilianhammersmith@gmail.com"}
]
keywords = ["machine learning", "bias", "py03", "rust"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
source = "https://github.com/khammersmith17/fair-perf-ml"
documentation = "https://khammersmith17.github.io/fair-perf-ml/"

[tool.maturin]
features = ["python"]
python-source = "python"
module-name = "fair_perf_ml._fair_perf_ml"

[tool.pytest.ini_options]
pythonpath = ["python"]

[tool.mypy]
python_version = "3.12"
