[package]
name = "fair_ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fair_ml"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.22.1"
pyo3 = "0.22.0"
rust-numpy = "0.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
